--- a/project/solution-01-from-1-to-6.ipynb
+++ b/project/solution-01-from-1-to-6.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "loans_lenders_un = pd.read_csv('datasets/kiva/loans_lenders.csv')\n",
+    "loans_lenders_un = pd.read_csv('../../Datasets/kiva/loans_lenders.csv')\n",
     "#loans_lenders_un = loans_lenders_un.head() # Coment this in real situation, uncomment during development\n",
     "loans_lenders_un"
    ]
@@ -335,7 +335,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "loans = pd.read_csv('datasets/kiva/loans.csv')\n",
+    "loans = pd.read_csv('../../Datasets/kiva/loans.csv')\n",
     "loans.columns"
    ]
   },
