--- a/project/solution-01-secondary-final.ipynb
+++ b/project/solution-01-secondary-final.ipynb
@@ -149,7 +149,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time as tm\n",
-    "FINAL = False # This is final calculation, on complete data\n",
+    "FINAL = True # This is final calculation, on complete data\n",
     "start_time = tm.time()\n",
     "loans_lenders_un = pd.read_csv('../../Datasets/kiva/loans_lenders.csv')\n",
     "if not FINAL:\n",
